@@ -133,6 +133,9 @@ public class NIOFSDirectory extends FSDirectory {
     
     @Override
     public IndexInput slice(String sliceDescription, long offset, long length) throws IOException {
+      if (offset < 0 || length < 0 || offset + length > this.length()) {
+        throw new IllegalArgumentException("slice() " + sliceDescription + " out of bounds: "  + this);
+      }
       return new NIOFSIndexInput(sliceDescription, channel, off + offset, length, getBufferSize());
     }
 
